--- a/src/application/cheatcodes.fxml
+++ b/src/application/cheatcodes.fxml
@@ -5,15 +5,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:controller="application.MenuController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuController">
    <children>
-      <Button layoutX="261.0" layoutY="262.0" mnemonicParsing="false" text="SNAKE" textFill="WHITE">
+      <Button fx:id="snakeButton" layoutX="261.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#snakeButtonClicked" text="SNAKE" textFill="WHITE">
          <font>
             <Font name="OCR A Extended" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="261.0" layoutY="200.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="78.0" text="PONG" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="pongButton" layoutX="261.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#pongButtonClicked" prefHeight="32.0" prefWidth="78.0" text="PONG" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="OCR A Extended" size="18.0" />
          </font>
