--- a/src/pong/ui/pongMenu.fxml
+++ b/src/pong/ui/pongMenu.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pong.controllers.PongMenuController">
     <columnConstraints>
@@ -19,9 +20,12 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-        <Button fx:id="playButton" mnemonicParsing="false" onMouseClicked="#playButtonClicked" text="Pong" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-        <Button fx:id="leaderboardButton" mnemonicParsing="false" onMouseClicked="#leaderboardButtonClicked" text="Leaderboard" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-        <Button fx:id="exitButton" mnemonicParsing="false" onMouseClicked="#exitButtonClicked" text="Exit to main" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+        <Label text="Pong!" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+         <font>
+            <Font size="76.0" />
+         </font></Label>
+        <Button fx:id="playButton" maxHeight="50.0" maxWidth="150.0" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#playButtonClicked" prefHeight="50.0" prefWidth="150.0" text="Play" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+        <Button fx:id="leaderboardButton" maxHeight="50.0" maxWidth="150.0" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#leaderboardButtonClicked" prefHeight="50.0" prefWidth="150.0" text="Leaderboard" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+        <Button fx:id="exitButton" maxHeight="50.0" maxWidth="150.0" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#exitButtonClicked" prefHeight="50.0" prefWidth="150.0" text="Exit to main" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
     </children>
 </GridPane>
