--- a/src/snake/ui/snakeMenu.fxml
+++ b/src/snake/ui/snakeMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="650.0" maxWidth="600.0" minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controllers.SnakeMenuController">
+<GridPane maxHeight="650.0" maxWidth="600.0" minHeight="353.0" minWidth="537.0" prefHeight="394.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controllers.SnakeMenuController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,13 +20,22 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label prefHeight="116.0" prefWidth="200.0" text="Snake" GridPane.columnIndex="1">
+      <Label prefHeight="116.0" prefWidth="223.0" text="SNAKE" textFill="WHITE" GridPane.columnIndex="1">
          <font>
-            <Font size="76.0" />
+            <Font name="OCR A Extended" size="64.0" />
          </font>
       </Label>
-      <Button fx:id="leaderboardButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#leaderboardButtonClickedSnake" text="Leaderboard" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <Button fx:id="playButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#playButtonClickedSnake" text="Play" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button fx:id="exitButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#exitButtonClickedSnake" text="Return to Main Menu" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Button fx:id="leaderboardButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#leaderboardButtonClickedSnake" prefHeight="50.0" prefWidth="252.0" text="LEARDERBOARD" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <font>
+            <Font name="OCR A Extended" size="14.0" />
+         </font></Button>
+      <Button fx:id="playButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#playButtonClickedSnake" prefHeight="50.0" prefWidth="232.0" text="PLAY" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+         <font>
+            <Font name="OCR A Extended" size="14.0" />
+         </font></Button>
+      <Button fx:id="exitButtonSnake" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#exitButtonClickedSnake" prefHeight="50.0" prefWidth="272.0" text="EXIT TO MAIN" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+         <font>
+            <Font name="OCR A Extended" size="14.0" />
+         </font></Button>
    </children>
 </GridPane>
