--- a/src/snake/ui/snakeLeaderboard.fxml
+++ b/src/snake/ui/snakeLeaderboard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="650.0" maxWidth="600.0" minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controllers.SnakeLeaderboardController">
+<GridPane maxHeight="650.0" maxWidth="600.0" minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controllers.SnakeLeaderboardController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,16 +22,19 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TableView fx:id="leaderboardTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
+      <TableView fx:id="leaderboardTable" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: BLACK;" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
          <columns>
             <TableColumn fx:id="entryNameColumn" prefWidth="279.55560302734375" text="Scoreholder" />
             <TableColumn fx:id="entryScoreColumn" minWidth="0.0" prefWidth="119.5555419921875" text="Score" />
          </columns>
       </TableView>
-      <Button fx:id="exitButton" maxHeight="50.0" maxWidth="150.0" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#exitButtonClicked" prefHeight="50.0" prefWidth="150.0" text="Return to Menu" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <Label text="Leaderboard!" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+      <Button fx:id="exitButton" maxHeight="50.0" maxWidth="150.0" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#exitButtonClicked" prefHeight="50.0" prefWidth="150.0" text="RETURN TO MENU" textFill="#fffefe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <font>
-            <Font size="25.0" />
+            <Font name="OCR A Extended" size="14.0" />
+         </font></Button>
+      <Label text="SNAKE LEADERBOARD" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+         <font>
+            <Font name="OCR A Extended" size="25.0" />
          </font>
       </Label>
    </children>
